--- a/frontend/src/components/chatPage/ChatSection.css
+++ b/frontend/src/components/chatPage/ChatSection.css
@@ -57,6 +57,7 @@
 }
 
 .start-msg {
+  margin-left: 30vw;
   margin-right: 27vw;
   text-align: center;
   color: #888;
@@ -110,6 +111,7 @@
 /* predefined word above search bar */
 
 .chat-section {
+  margin-left:-10px ;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -118,6 +120,7 @@
 }
 
 .chat-messages {
+  margin-left: 7px;
   flex-grow: 1;
   overflow-y: auto;
   padding: 16px;
@@ -135,7 +138,7 @@
 }
 
 .message-bubble.user {
-  margin-right: 55px;
+  margin-right: 50px;
   align-self: flex-end;
   background-color: #d1eaff;
   color: #0d3b66;
@@ -143,6 +146,7 @@
 }
 
 .message-bubble.bot {
+  margin-left: 35px;
   align-self: flex-start;
   background-color: #ffffff;
   color: #333;
@@ -190,8 +194,8 @@
   overflow-x: auto;
  /* -webkit-overflow-scrolling: touch;
   scrollbar-width: thin;
-  scrollbar-color: transparent transparent;
- */
+  scrollbar-color: transparent transparent; */
+
 }
 
 .suggested-prompts::-webkit-scrollbar {
