--- a/frontend/src/components/sidePage/Sidebar.css
+++ b/frontend/src/components/sidePage/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 298px;
+  width: 280px;
   height: 100vh;
   background: linear-gradient(to bottom, #134e5e, #71b280);
   color: white;
